add dcat-ap-ch version 2 draft link to index page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       <td>pdf</td>
       <td>Aktuell gültiger Datenstandard DCAT-AP-CH</td>
     </tr>
+    <tr>
+      <td><a href="releases/2.0/dcat_ap_ch.html">DCAT-AP-CH</a></td>
+      <td>Version 2, Draft</td>
+      <td>html</td>
+      <td>DCAT-AP-CH version 2.0 in preparation: the issues in this repo relate to the next DCAT-AP-CH</td>
+    </tr>
     </tbody>
   </table>
 </div>
